2009-11-16  Alexey Proskuryakov  <ap@apple.com>

        Windows build fix.

        * platform/network/cf/SocketStreamHandleCFNet.cpp: Don't try to include a file that's not
        in WebKitSupportLibrary.

2009-11-16  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=31494
        Add unauthenticated proxy support to SocketStreamHandleCFNet

        Cannot be tested in DRT.

        * platform/network/cf/SocketStreamHandleCFNet.cpp:
        (WebCore::SocketStreamHandle::chooseProxy): Fetch proxy information from OS.
        (WebCore::SocketStreamHandle::createStreams): Apply it to the newly created streams.

2009-11-14  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Antti Koivisto.

        [Qt] Broken back/forward after using ErrorPageExtension to set error page
        https://bugs.webkit.org/show_bug.cgi?id=30573

        Make FrameLoader::checkLoadCompleteForThisFrame method
        to check for any working DocumentLoader instance (through
        activeDocumentLoader()) instead of only checking for
        'm_provisionalDocumentLoader' in order to decide to if
        it is going to reset of not the back and forward history.
        after an error page has been loaded.

        Test: LayoutTests/fast/history/back-forward-reset-after-error-handling.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::checkLoadCompleteForThisFrame):

2009-11-14  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        Need to implement ARIA role="directory"
        https://bugs.webkit.org/show_bug.cgi?id=31516

        Test: platform/mac/accessibility/aria-directory.html

        * accessibility/AXObjectCache.cpp:
        (WebCore::AXObjectCache::getOrCreate):
        * accessibility/AccessibilityList.cpp:
        (WebCore::AccessibilityList::isOrderedList):
        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::createARIARoleMap):
